--- a/app/views/board/simple/new.html.erb
+++ b/app/views/board/simple/new.html.erb
@@ -1,54 +1,1 @@
-<BIG>Новое сообщение</BIG></TD></TR><TR><TD COLSPAN=2><HR ALIGN=CENTER WIDTH="80%" NOSHADE></TR>
-<TR><TD ALIGN=CENTER><b>Имя:</b></TD><TD ALIGN=LEFT><B><%=  "%username%" -%></B>&nbsp;&nbsp;&nbsp;
-    <A HREF="?login=logoff&key=26571"><SMALL>[Выход] </SMALL></A></TD></TR>
-<TR><TD ALIGN=CENTER><b>Тема:</b></TD><TD ALIGN=LEFT><SELECT NAME="topic" tabindex="1">
-      <OPTION VALUE="0">без темы
-      <OPTION VALUE="4">Учеба
-      <OPTION VALUE="3">Работа
-      <OPTION VALUE="1">Мурзилка
-      <OPTION VALUE="5">Обсуждение
-      <OPTION VALUE="15">Новости
-      <OPTION VALUE="18">Спорт
-      <OPTION VALUE="8">Развлечения
-      <OPTION VALUE="7">Движок борды
-      <OPTION VALUE="2">Программирование
-      <OPTION VALUE="6">Куплю
-      <OPTION VALUE="9">Продам
-      <OPTION VALUE="11">Услуги
-      <OPTION VALUE="13">Windows
-      <OPTION VALUE="12">BSD/Linux
-      <OPTION VALUE="14">Проблемы сети
-      <OPTION VALUE="16">Голосование
-      <OPTION VALUE="17">Потеряно/Найдено
-      <OPTION VALUE="10">Temp
-    </SELECT><INPUT TYPE=TEXT NAME="subject" SIZE=62 MAXLENGTH=99 VALUE="" tabindex="1"></TD></TR>
-<TR><TD COLSPAN=2 ALIGN=CENTER>
-    <input type="button" class="qe_button" accesskey="b" name="style0" value="b" style="width: 30px" onclick="setstyle(0)" title="жирный текст: [b]текст[/b] (alt+b)" tabindex="5" />&nbsp;
-    <input type="button" class="qe_button" accesskey="i" name="style2" value="i" style="width: 30px" onclick="setstyle(2)" title="наклонный текст: [i]текст[/i] (alt+i)" tabindex="5" />&nbsp;
-    <input type="button" class="qe_button" accesskey="u" name="style4" value="u" style="width: 30px" onclick="setstyle(4)" title="подчёркнутый текст: [u]текст[/u] (alt+u)" tabindex="5" />&nbsp;
-    <input type="button" class="qe_button" accesskey="q" name="style6" value="q" style="width: 30px" onclick="setstyle(6)" title="цитата: [q]текст[/q] (alt+q)" tabindex="5" />&nbsp;
-    <input type="button" class="qe_button" accesskey="p" name="style8" value="pic" style="width: 40px" onclick="setstyle(8)" title="картинка: [pic]http://ссылка[/pic]  (alt+p)" tabindex="5" />&nbsp;
-    <input type="button" class="qe_button" accesskey="w" name="style10" value="url" style="width: 40px" onclick="setstyle(10)" title="ссылка: [url=http://ссылка]название[/url] (alt+w)" tabindex="5" />&nbsp;
-    <input type="button" class="qe_button" accesskey="c" name="stylec" value="close" style="width: 55px" onclick="setstyle(-1)" title="закрыть все открытые теги (alt+c)" tabindex="5" />&nbsp;
-    <input type="button" class="qe_button" accesskey="s" name="styles" value="smile" style="width: 55px" onclick="setstyle(-2)" title="таблица смайлов  (alt+s)" tabindex="5" />&nbsp;
-    <div class="smilestable" id="smilestable">
-      <table class="smilestable"><tr><td><a href="#" onclick="insert_smile(' :) '); return false;"><img src="pic/smile.gif" /></a></td>
-          <td><a href="#" onclick="insert_smile(' :)) '); return false;">
-              <img src="pic/bigsmile.gif" /></a></td>
-              <td><a href="#" onclick="insert_smile(' :( '); return false;">
-                  <img src="pic/frown.gif" /></a></td></tr><tr><td><a href="#" onclick="insert_smile(' ;) '); return false;"><img src="pic/wink.gif" /></a></td>
-          <td><a href="#" onclick="insert_smile(' :LOL '); return false;"><img src="pic/lol.gif" /></a></td>
-          <td><a href="#" onclick="insert_smile(' :\\ '); return false;"><img src="pic/smirk.gif" /></a></td></tr><tr><td><a href="#" onclick="insert_smile(' :SMOKE '); return false;"><img src="pic/smoke.gif" /></a></td><td><a href="#" onclick="insert_smile(' :NO '); return false;"><img src="pic/no.gif" /></a></td>
-          <td><a href="#" onclick="insert_smile(' :YES '); return false;"><img src="pic/yes.gif" /></a></td></tr><tr><td><a href="#" onclick="insert_smile(' :BORED '); return false;"><img src="pic/bored.gif" /></a></td><td><a href="#" onclick="insert_smile(' :CRAZY '); return false;">
-              <img src="pic/crazy.gif" /></a></td><td><a href="#" onclick="insert_smile(' :MAD '); return false;"><img src="pic/mad.gif" /></a></td></tr><tr><td><a href="#" onclick="insert_smile(' :DRAZNIT '); return false;"><img src="pic/draznit.gif" /></a></td><td><a href="#" onclick="insert_smile(' :o '); return false;"><img src="pic/redface.gif" /></a></td>
-          <td><a href="#" onclick="insert_smile(' :ROLLEYES '); return false;"><img src="pic/rolleyes.gif" /></a></td></tr><tr><td><a href="#" onclick="insert_smile(' :FIGA '); return false;"><img src="pic/figa.gif" /></a></td><td><a href="#" onclick="insert_smile(' :DEVIL '); return false;"><img src="pic/devil.gif" /></a></td><td><a href="#" onclick="insert_smile(' :CIQ '); return false;">
-              <img src="pic/iq.gif" /></a></td></table></div><br /></TD></TR>
-<TR><TD COLSPAN=2 ALIGN=CENTER>
-    <TEXTAREA COLS=75 ROWS=12 NAME="body" CLASS="post" onselect="storeCaret(this);" onclick="storeCaret(this);" onkeyup="storeCaret(this);" tabindex="2">
-    </TEXTAREA></TD></TR>
-<TR><TD COLSPAN=2 ALIGN=RIGHT class=cl>Отключить распознавание Тегов конференции <INPUT TYPE=CHECKBOX NAME="dct" class=cl><BR>Отключить распознавание  смайл-кодов <INPUT TYPE=CHECKBOX NAME="dst" class=cl><BR>Получать уведомления об ответах по почте<INPUT TYPE=CHECKBOX NAME="wen" class=cl></TD></TR>
-<TR><TD COLSPAN=2><HR ALIGN=CENTER WIDTH="80%" NOSHADE></TR><TR><TD COLSPAN=2 ALIGN=CENTER><script language="JavaScript" type="text/javascript" src="/postcheck.js"></script>
-    <script language="JavaScript" type="text/javascript" src="/qecode2.js"></script>
-    <INPUT TYPE=SUBMIT NAME="preview" onClick="onSubmit(this)" VALUE="Предварительный просмотр" class="fb" tabindex="4">
-    <INPUT TYPE=SUBMIT NAME="post" onClick="onSubmit(this)" VALUE="Отправить" class="fb" tabindex="3">
-    <INPUT TYPE=HIDDEN NAME="jpost" VALUE=""></TD></TR></TABLE></FORM></CENTER><P>&nbsp;
+<%= render :partial => "board/simple/post_form", :locals => {:post => @post, :form_action => :create} %>
